
   - OpeTemplates: fix load order of detail rows.

 Other changes:

   - Upgrade to Gtk+ 3.16.
   - Upgrade to Fedora 22 build chain.
   - Upgrade DBMS to v26.
   - ofaAccountsBook class: renamed to ofaAccountsChart (todo #816).
   - ofaLedgerClose: have a 'All ledgers' button (todo #815).
   - Printings: optimize dataset load.
   - Settings: have a dossier.conf special development (todo #820).
   - my_utils_container_attach_from_ui(): new function.
   - my_utils_widget_set_style(): new function.
   - my_utils_widget_set_margin(): new function.
   - my_utils_widget_set_margin_left(): new function.
   - my_utils_widget_set_margin_right(): new function.
   - my_utils_widget_set_xalign(): new function.
   - ofo_bat_get_account(): new method.
   - ofo_bat_set_account(): new method.
   - ofo_dossier_get_last_closing_date(): new method.
   - ofo_dossier_set_last_closing_date(): new method.
   - ofo_dossier_get_prev_exe_last_entry(): new method.
   - ofo_dossier_set_prev_exe_last_entry(): new method.
   - ofa_application_get_copyright(): new method.
   - ofa_irenderable_free_dataset(): removed interface method.
   - ofa_irenderable_get_dataset(): removed interface method.
   - ofa_ledger_treeview_get_selection(): new method.
   - ofa_reconciliation_set_account(): new method.
   - ofa_render_page_free_dataset(): new virtual method.
   - ofa_render_page_get_dataset(): new virtual method.
   - ofa_render_page_set_args_valid(): renamed as ofa_render_page_set_args_changed().
   - ofa_settings_get_key_file(): renamed as ofa_settings_get_filename().
   - ofa_settings_get_actual_keyfile(): renamed as ofa_settings_get_keyfile().
   - ofa_settlement_set_account(): new method.
   - src/ui/ofa-import-ex.ui: removed file.

-----------------------------------------------------------------------
 Version 0.39
 ============

 Released on 2014-04-18

 New features:

	- Have account and ledger convertors on EBP import scripts (todo #771).