@@ -703,6 +703,75 @@ my_utils_widget_get_toplevel_window( GtkWidget *widget )
 }
 
 /**
+ * my_utils_widget_set_editable:
+ * @widget: the #GtkWdiget.
+ * @editable: whether the @widget is editable or not.
+ *
+ * Try to set a visual indication of whether the @widget is editable or not.
+ *
+ * Having a GtkWidget should be enough, but we also deal with a GtkTreeViewColumn.
+ * So the most-bottom common ancestor is just GObject (since GtkObject having been
+ * deprecated in Gtk+-3.0)
+ *
+ * Note that using 'sensitivity' property is just a work-around because the
+ * two things have distinct semantics:
+ * - editable: whether we are allowed to modify the value (is not read-only)
+ * - sensitive: whether the value is relevant (has a sense in this context)
+ */
+void
+my_utils_widget_set_editable( GObject *widget, gboolean editable )
+{
+	GList *renderers, *irender;
+
+	/* GtkComboBoxEntry is deprecated from Gtk+3
+	 * see. http://git.gnome.org/browse/gtk+/commit/?id=9612c648176378bf237ad0e1a8c6c995b0ca7c61
+	 * while 'has_entry' property exists since 2.24
+	 */
+	if( GTK_IS_COMBO_BOX( widget ) && gtk_combo_box_get_has_entry( GTK_COMBO_BOX( widget ))){
+		/* idem as GtkEntry */
+		gtk_editable_set_editable( GTK_EDITABLE( gtk_bin_get_child( GTK_BIN( widget ))), editable );
+		g_object_set( G_OBJECT( gtk_bin_get_child( GTK_BIN( widget ))), "can-focus", editable, NULL );
+		/* disable the listbox button itself */
+		gtk_combo_box_set_button_sensitivity( GTK_COMBO_BOX( widget ), editable ? GTK_SENSITIVITY_ON : GTK_SENSITIVITY_OFF );
+
+	} else if( GTK_IS_COMBO_BOX( widget )){
+		/* disable the listbox button itself */
+		gtk_combo_box_set_button_sensitivity( GTK_COMBO_BOX( widget ), editable ? GTK_SENSITIVITY_ON : GTK_SENSITIVITY_OFF );
+
+	} else if( GTK_IS_ENTRY( widget )){
+		gtk_editable_set_editable( GTK_EDITABLE( widget ), editable );
+		/* removing the frame leads to a disturbing modification of the
+		 * height of the control */
+		/*g_object_set( G_OBJECT( widget ), "has-frame", editable, NULL );*/
+		/* this prevents the caret to be displayed when we click in the entry */
+		g_object_set( G_OBJECT( widget ), "can-focus", editable, NULL );
+
+	} else if( GTK_IS_TEXT_VIEW( widget )){
+		g_object_set( G_OBJECT( widget ), "can-focus", editable, NULL );
+		gtk_text_view_set_editable( GTK_TEXT_VIEW( widget ), editable );
+
+	} else if( GTK_IS_TOGGLE_BUTTON( widget )){
+		/* transforms to a quasi standard GtkButton */
+		/*g_object_set( G_OBJECT( widget ), "draw-indicator", editable, NULL );*/
+		/* this at least prevent the keyboard focus to go to the button
+		 * (which is better than nothing) */
+		g_object_set( G_OBJECT( widget ), "can-focus", editable, NULL );
+
+	} else if( GTK_IS_TREE_VIEW_COLUMN( widget )){
+		renderers = gtk_cell_layout_get_cells( GTK_CELL_LAYOUT( GTK_TREE_VIEW_COLUMN( widget )));
+		for( irender = renderers ; irender ; irender = irender->next ){
+			if( GTK_IS_CELL_RENDERER_TEXT( irender->data )){
+				g_object_set( G_OBJECT( irender->data ), "editable", editable, "editable-set", TRUE, NULL );
+			}
+		}
+		g_list_free( renderers );
+
+	} else if( GTK_IS_BUTTON( widget )){
+		gtk_widget_set_sensitive( GTK_WIDGET( widget ), editable );
+	}
+}
+
+/**
  * my_utils_widget_set_style:
  * @widget:
  * @style:
